perf(commons): OrJavaScriptUtil优化